@@ -65,7 +65,7 @@ After git installation, go to a working directory and do this:
 
     git clone git://gitorious.org/makefly/master.git makefly_dev
 
-This will fetch makefly repository and add files into **makefly_dev** directory.
+This will fetch makefly repository and add files into **makefly\_dev** directory.
 
 **Note**: Using git is useful to easily update makefly. In fact:
 
@@ -83,7 +83,7 @@ For more information please read **The makefly.rc configuration file** section.
 
 ## Create content
 
-A bash shell script is available in **tools** directory: **create_post.sh**. To use it:
+A bash shell script is available in **tools** directory: **create\_post.sh**. To use it:
 
     cd tools
     bash create_post.sh
@@ -110,37 +110,42 @@ Note: *pmake* is for Debian like distribution. For other distributions, I sugges
 
 Here is some options you can change:
 
-  * BLOG_TITLE: Title of your weblog
-  * BLOG_SHORT_DESC: A short description of your weblog
-  * BLOG_DESCRIPTION: A long description of your weblog
-  * BLOG_LANG: your language code. Note that file lang/translate.YOUR_LANGUAGE_CODE should exists. For an example if I set this parameter to *en*, a *lang/translate.en* file should exists!
-  * BLOG_CHARSET: your encoding configuration. Should be something like **UTF-8** or **ISO-8859-1**. If you don't know what's this option, just let it to *UTF-8*.
-  * BASE_URL: absolute URL of your blog. For an example http://makefly.e-mergence.org/.
-  * RSS_FEED_NAME: Title for the RSS Feed
-  * MAX_POST: Max post that would be showed on home page
-  * DATE_FORMAT: Date format displayed for each post. Please see man date's page for more information.
-  * SHORT_DATE_FORMAT: Short date format that would be used on the post list page. Please see man date's page for more information.
-  * INDEX_FILENAME: Name given to all index'pages. For an example with **INDEX_FILENAME = mainpage**, post list page will be named *mainpage.html*.
-  * PAGE_EXT: suffix that all page will have. **DO NOT FORGET TO ADD A POINT BEFORE SUFFIX**. For an example, with **PAGE_EXT = .html**, all pages will be under the form: index.html.
-  * ABOUT_FILENAME: As described, this is the about's filename. If you set it to "about" for an example, you have to create a "about.md" file into **special** directory in order to have an about's page. If you change it to "toto", so you have to create a *toto.md* file into **special** directory.
-  * POSTDIR_NAME: The name you want to be displayed in URL when a user go to post list. For an example, if you set it to "myposts": http://makefly.e-mergence.org/myposts/ will display all you posts. This is useful for others languages.
-  * TAGDIR_NAME: Same behaviour as POSTDIR_NAME, but for tags. Change it to "mytags" for an example, and you will have URLs like this: http://makefly.e-mergence.org/mytags/ to display tag list.
+  * BLOG\_TITLE: Title of your weblog
+  * BLOG\_SHORT\_DESC: A short description of your weblog
+  * BLOG\_DESCRIPTION: A long description of your weblog
+  * BLOG\_LANG: your language code. Note that file lang/translate.YOUR\_LANGUAGE\_CODE should exists. For an example if I set this parameter to *en*, a *lang/translate.en* file should exists!
+  * BLOG\_CHARSET: your encoding configuration. Should be something like **UTF-8** or **ISO-8859-1**. If you don't know what's this option, just let it to *UTF-8*.
+  * BASE\_URL: absolute URL of your blog. For an example http://makefly.e-mergence.org/.
+  * RSS\_FEED\_NAME: Title for the RSS Feed
+  * MAX\_POST: Max post that would be showed on home page
+  * DATE\_FORMAT: Date format displayed for each post. Please see man date's page for more information.
+  * SHORT\_DATE\_FORMAT: Short date format that would be used on the post list page. Please see man date's page for more information.
+  * INDEX\_FILENAME: Name given to all index'pages. For an example with **INDEX\_FILENAME = mainpage**, post list page will be named *mainpage.html*.
+  * PAGE\_EXT: suffix that all page will have. **DO NOT FORGET TO ADD A POINT BEFORE SUFFIX**. For an example, with **PAGE\_EXT = .html**, all pages will be under the form: index.html.
+  * ABOUT\_FILENAME: As described, this is the about's filename. If you set it to "about" for an example, you have to create a "about.md" file into **special** directory in order to have an about's page. If you change it to "toto", so you have to create a *toto.md* file into **special** directory.
+  * POSTDIR\_NAME: The name you want to be displayed in URL when a user go to post list. For an example, if you set it to "myposts": http://makefly.e-mergence.org/myposts/ will display all you posts. This is useful for others languages.
+  * TAGDIR\_NAME: Same behaviour as POSTDIR\_NAME, but for tags. Change it to "mytags" for an example, and you will have URLs like this: http://makefly.e-mergence.org/mytags/ to display tag list.
   * THEME: Name of the theme you want to be used. All themes are available in **template** directory. Each theme have its own directory. For an example, "default" theme have its **template/default** directory.
   * BACKUPDIR: Name of directory where *backup* command will save all files.
-  * SIDEBAR_FILENAME: As described, name of sidebar file that would be used to create a sidebar. If you set it to "sidebar" for an example, you have to create a "sidebar.md" file into **special** directory in order to have this sidebar. Note that your theme should support sidebars!
+  * SIDEBAR\_FILENAME: As described, name of sidebar file that would be used to create a sidebar. If you set it to "sidebar" for an example, you have to create a "sidebar.md" file into **special** directory in order to have this sidebar. Note that your theme should support sidebars!
   * SIDEBAR: If set to 1, so activate a sidebar on Makefly. Note that your theme should support sidebars!
+  * PUBLISH\_DESTINATION: Full address from where to send files in order to publish them.
+  * PUBLISH\_SCRIPT\_NAME: script filename used to send files from **pub** directory to a destination filled in *PUBLISH\_DESTINATION* variable.
 
 ## Publish result to the web
 
 The result is compatible with all HTML servers. In fact you could probably use result with your website provider. You just have to upload all files from **pub** directory to your provider's web directory.
 
+### From a webserver
+
 If you launch Makefly on you own server or probably on provider ' server, you should so use **install.sh** which is a bash shell script. Just launch it:
 
-    bash install.sh
+    cd tools
+    bash tinstall.sh
 
-...and it will copy all files to **~/public_html** directory.
+...and it will copy all files to **~/public\_html** directory.
 
-**WARNING**: This will erase all files from *public_html* directory!
+**WARNING**: This will erase all files from *public\_html* directory!
 
 **Note**: You can customize the script to copy files in another directory. To do that, just edit *install.sh** script and change this variable:
 
@@ -152,9 +157,30 @@ to:
 
 Relaunch *install.sh* script to see result.
 
+### To a remote computer: *publish* command
+
+To publish your blog to a remote computer you have to:
+
+  * have an SSH access to the remote machine
+  * have rsync program
+  * configure **PUBLISH\_DESTINATION** in **makefly.rc** file
+  * launch **publish** command
+
+That's all!
+
+Note that **PUBLISH\_DESTINATION** looks like:
+
+    myRemoteUser@remoteDomain.tld:/myhomedirectory/public_dir
+
+Once having complete this variable in **makefly.rc** file, just launch:
+
+    pmake publish
+
+For developers: You can also edit **tools/publish.sh** file and change script content to you own code.
+
 ## Translation
 
-A simple way to translate Makefly to your language is to copy the **lang/translate.en** file to another translation file. For an example, for french (with fr code), you can copy **lang/translate.en** to **lang/translate.fr** and change values. Then just change *BLOG_LANG* option in **makefly.rc** file.
+A simple way to translate Makefly to your language is to copy the **lang/translate.en** file to another translation file. For an example, for french (with fr code), you can copy **lang/translate.en** to **lang/translate.fr** and change values. Then just change *BLOG\_LANG* option in **makefly.rc** file.
 
 ## Backup
 
@@ -175,7 +201,7 @@ Files saved:
   * db directory
   * src directory
 
-Result: This will create a *tarball* named *YYYYMMDD_makefly.tar.gz* in **mbackup** directory (for an example 20120823_makefly.tar.gz). You can so backup your Makefly each day for an example.
+Result: This will create a *tarball* named *YYYYMMDD\_makefly.tar.gz* in **mbackup** directory (for an example 20120823\_makefly.tar.gz). You can so backup your Makefly each day for an example.
 
 Tip: You can customize backup directory by using **BACKUPDIR** option in your **makfley.rc** file.
 
